# hycol_tool

./: .gitignore  Cargo.toml  build.sh  index.html  main.js  package-lock.json  package.json  style.css  triangle.html  triangle.js  vite.config.js
pkg/: hycol_tool.d.ts  hycol_tool.js  hycol_tool_bg.js  hycol_tool_bg.wasm  hycol_tool_bg.wasm.d.ts  package.json
src/: lib.rs
torus/: index.html  torus.js
triangle/: index.html  triangle.js
