[package]
name = "hycol_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
hycol = { path = "../hycol" }
js-sys = "0.3.68"
lazy_static = "1.4.0"
num-complex = "0.4.5"
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "ImageData"
]

[lib]
crate-type = ["cdylib"]
